--- a/style.css
+++ b/style.css
@@ -2,6 +2,50 @@ h1, h2, h3{
   font-family: cursive;
 }
 
+body {
+  background-color: black;
+  color: white;
+}
+
+a {
+  color: hotpink;
+}
+
+a:hover{
+  color: dodgerblue;
+}
+
+a {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px transparent;
+  position: relative;
+}
+a:before {
+  pointer-events: none;
+  content: '';
+  position: absolute;
+  border: #e1e1e1 solid 4px;
+  top: -16px;
+  right: -16px;
+  bottom: -16px;
+  left: -16px;
+  opacity: 0;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: top, right, bottom, left;
+  transition-property: top, right, bottom, left;
+}
+a:hover:before, a:focus:before, a:active:before {
+  top: -8px;
+  right: -8px;
+  bottom: -8px;
+  left: -8px;
+  opacity: 1;
+}
+
 img {
   height: 400px;
   width: 400px;
